# advanced-cleanup-utility-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/modules/: mod.rs  temp_cleaner.rs
