[package]
name = "advanced-cleanup-utility"
version = "1.4.0"
edition = "2021"
authors = ["Technical Solutions for Blind"]
description = "Advanced System Cleanup Utility 1.4 - Rust Edition with Deep System Cleaning for Visually Impaired Users"
license = "MIT"

[dependencies]
winreg = "0.51"
winapi = { version = "0.3", features = ["winuser", "shellapi", "processthreadsapi", "impl-default"] }
win_toast = "2.0"
fltk = "1.4"
fltk-theme = "0.7"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.30"
performance-monitor = "0.3"
registry = "1.3"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
walk = "2.4"
regex = "1.10"
once_cell = "1.19"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
clipboard-win = "5.0"
open = "5.0"
process_control = "4.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "advanced-cleanup-utility"
path = "src/main.rs"
